# NotASignServer

./: .gitignore  Cargo.toml  Dockerfile  README.md  README.zh.md  build.rs  build.sh  sign.config.toml  symbols.c
src/: config.rs  error.rs  main.rs  service.rs  sign.c  sign.rs
