[package]
name = "sign"
version = "1.0.0"
edition = "2024"
readme = "README.md"
license = "AGPL-3.0-only"
authors = ["Moew72 <Moew72@proton.me>"]

[build-dependencies]
cc = "1.2.41"

[dependencies]
data-encoding = "2.9.0"
ntex = { version = "2.16.0", features = ["compio"] }
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
