[package]
name = "sign"
version = "1.2.0"
edition = "2024"
readme = "README.md"
license = "AGPL-3.0-only"
authors = ["Moew72 <Moew72@proton.me>"]

[build-dependencies]
cc = "1.2.41"

[dependencies]
data-encoding = "2.9.0"
ntex = { version = "2.16.0", features = ["compio"] }
rust-embed = "8.8.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
toml = "0.9.8"

[profile.release]
codegen-units = 1
lto = true
strip = true
